<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="twitter_consumer_key" translatable="false">
					856958671749775360-zigDhcOew8Fg7GwHPsTVrOtOoTEyukM</string>

    <string name="twitter_consumer_secret" translatable="false">
					Wx27TEzHTkITClUoejfQ8QH3cDqDjzzvYoUW1ylYF36Jd</string>

    <string name="title_activity_bottom_navigation">Navigation activity</string>
    <string name="title_map_view">Map View</string>
    <string name="title_hungry">I\'m Hungry!</string>
    <string name="title_list_view">List View</string>
    <string name="title_workmates">Available workmates</string>
    <string name="go4lunch">Go4Lunch</string>
    <string name="find_a_nice_restaurant_and_invite_your_co_workers_for_lunch">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="menu_lunch">YOUR LUNCH</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="set_restaurant_button">Set restaurant button</string>
    <string name="detail_restaurant_image">Detail Restaurant Image</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="facebook_application_id" translatable="false">367361037800074</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb367361037800074</string>
    <string name="error_unknown_error">unknown error</string>
    <string name="google_place_image">Google Place Image</string>
    <string name="connection_succeed">Connection Succeed</string>
    <string name="error_authentication_canceled">Authentication canceled</string>
    <string name="error_no_internet">No Internet</string>
    <string name="joining_text">%1$s is joining!</string>
    <string name="lunching_text">%1$s is lunching at %2$s</string>
    <string name="not_decided">%1$s hasn\'t decided yet</string>
    <string name="distance">%1$d\m</string>
    <string name="place_name">Thios is place name example</string>
    <string name="place_open">Open now</string>
    <string name="place_close">Close</string>
    <string name="channel_name">Go4Lunch</string>
    <string name="channel_description">Your workmate choose a lunch spot</string>
    <string name="lunchSpotId">lunchSpotId</string>
    <string name="currentUserId">currentUserId</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enable_gps">Enable Gps</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">enable now</string>
    <string name="default_notification_channel_id">go4LunchNotification</string>
    <string name="default_notification_channel_name">go4Lunch</string>
    <string name="msg_token_fmt">FCM registration Token: %s</string>
    <string name="notification_lunching_text">You\'re lunching at %1$s on %2$s with %3$s</string>
    <string name="notification_lunching_alone_text">You\'re lunching alone at %1$s on %2$s.</string>
    <string name="msg_subscribed">subscribed</string>
    <string name="msg_subscribe_failed">subsribed failed</string>
    <string name="notifications_label">Enable message notifications</string>
    <string name="email_connexion">Sign in by email</string>
    <string name="fui_sign_in_with_twittern">Sign in with Twitter</string>
    <string name="no_workmates_are_lunching_in_this_restaurant">No workmates are lunching in this restaurant</string>
    <string name="no_website_notification">This restaurant doesn\'t have website yet!</string>
    <string name="no_lunch_spot_notification">You don\'t have any lunch spo yet!</string>
    <string name="restaurantCounter">(%d)</string>
    <string name="notification_title">Ready for lunch?</string>


</resources>