<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_graph"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.tizzone.go4lunch.ui.map.MapFragment"
        android:label="@string/title_hungry"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.tizzone.go4lunch.ui.list.ListViewFragment"
        android:label="@string/title_hungry"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_navigation_list_to_placeDetailActivity2"
            app:destination="@id/placeDetailActivity"
            app:enterAnim="@anim/fui_slide_in_right"
            app:exitAnim="@anim/fui_slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/navigation_workmates"
        android:name="com.tizzone.go4lunch.ui.workmates.WorkmatesFragment"
        android:label="@string/title_workmates"
        tools:layout="@layout/fragment_workmates">

    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.tizzone.go4lunch.ui.settings.SlideshowFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/placeDetailActivity"
        android:name="com.tizzone.go4lunch.ui.list.PlaceDetailActivity"
        android:label="PlaceDetailActivity" />
</navigation>