<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_anchor="@+id/app_bar"
            app:layout_anchorGravity="bottom|start">

            <LinearLayout
                android:id="@+id/detail_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red_500"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/detail_title_rating_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red_500"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detail_place_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="title"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <RatingBar
                        android:id="@+id/detail_rating_bar"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:numStars="3"
                        android:theme="@style/RatingBar" />
                </LinearLayout>

                <TextView
                    android:id="@+id/detail_place_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/call_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="50dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/call_button"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_baseline_call_24"
                            android:color="@color/red_500" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:color="@color/red_500"
                            android:text="@string/call" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/website_layout"
                        android:layout_toEndOf="@+id/call_layout"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_baseline_star_24"
                            android:color="@color/red_500" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:color="@color/red_500"
                            android:text="@string/like" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/website_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end"
                        android:layout_marginEnd="50dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/website_button"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_baseline_public_24"
                            android:color="@color/red_500" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:color="@color/red_500"
                            android:gravity="end"
                            android:text="@string/website" />
                    </LinearLayout>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/users_spot_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/no_worlmates_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="No workmates are lunching in this restaurant"
                android:textAlignment="center" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>